<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/dongdong"
        android:gravity="center"
        android:text="@string/personalInfo"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintBottom_toTopOf="@+id/clearPersonalInfoButton"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/sexTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/dongdong"
            android:text="@string/personalInfoSex"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/personalInfoSexTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="여"
            app:layout_constraintStart_toStartOf="@+id/sexTextView"
            app:layout_constraintTop_toBottomOf="@+id/sexTextView" />

        <Spinner
            android:id="@+id/sexSpinner"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:entries="@array/personalInfoSexList"
            app:layout_constraintStart_toEndOf="@+id/personalInfoSexTextView"
            app:layout_constraintTop_toTopOf="@id/personalInfoSexTextView" />

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/dongdong"
            android:text="@string/personalInfoAge"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sexSpinner" />

        <TextView
            android:id="@+id/personalInfoAgeTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="20"
            app:layout_constraintStart_toStartOf="@+id/ageTextView"
            app:layout_constraintTop_toBottomOf="@+id/ageTextView" />

        <Spinner
            android:id="@+id/ageSpinner"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:entries="@array/personalInfoAgeList"
            app:layout_constraintStart_toEndOf="@+id/personalInfoAgeTextView"
            app:layout_constraintTop_toTopOf="@id/personalInfoAgeTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearPersonalInfoButton"
            android:layout_width="match_parent"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:fontFamily="@font/dongdong"
            android:background="@drawable/button_background_blue"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="12dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>





</androidx.constraintlayout.widget.ConstraintLayout>