<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/myPageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/dongdong"
        android:gravity="center"
        android:text="내 정보"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPageTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/myPagePersonalInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1">

        <ImageView
            android:id="@+id/myPagePersonalImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="@id/myPagePersonalInfoLayout"
            app:layout_constraintTop_toTopOf="@id/myPagePersonalInfoLayout" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/myPagePersonalImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/myPagePersonalImageView"
            app:layout_constraintTop_toTopOf="@id/myPagePersonalImageView">

            <TextView
                android:id="@+id/myPagePersonalInfoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="인코님"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/myPagePersonalInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="남자, 20세"
                android:textColor="@color/textColor" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPagePersonalInfoLayout" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/myPageTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:tabIndicatorColor="@color/textColor"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/textColor">

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="얼굴" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="바디" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="손" />


    </com.google.android.material.tabs.TabLayout>

    <TableLayout
        android:id="@+id/myPageTableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:background="@color/buttonGray"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/line3"
        app:layout_constraintTop_toBottomOf="@+id/myPageTabLayout"
        tools:visibility="visible">


        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/dongdong"
                android:text="피부톤"
                android:textColor="@color/textColor"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/dongdong"
                android:text="상위 51%"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="20dp"
                android:max="10"
                android:progress="1"
                android:progressDrawable="@color/transparent"
                android:thumb="@drawable/ic_thumb"
                android:tickMark="@drawable/drawable_tick_mark" />

        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/dongdong"
                android:text="모공"
                android:textColor="@color/textColor"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/dongdong"
                android:text="상위 23%"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="20dp"
                android:max="10"
                android:progress="1"
                android:progressDrawable="@color/transparent"
                android:thumb="@drawable/ic_thumb"
                android:tickMark="@drawable/drawable_tick_mark" />

        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/dongdong"
                android:text="각질"
                android:textColor="@color/textColor"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/dongdong"
                android:text="상위 12%"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <SeekBar
                android:id="@+id/seekBar3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="20dp"
                android:max="10"
                android:progress="1"
                android:progressDrawable="@color/transparent"
                android:thumb="@drawable/ic_thumb"
                android:tickMark="@drawable/drawable_tick_mark" />

        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/dongdong"
                android:text="색소침착"
                android:textColor="@color/textColor"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/dongdong"
                android:text="상위 25%"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <SeekBar
                android:id="@+id/seekBar4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="20dp"
                android:max="10"
                android:progress="1"
                android:progressDrawable="@color/transparent"
                android:thumb="@drawable/ic_thumb"
                android:tickMark="@drawable/drawable_tick_mark" />

        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/dongdong"
                android:text="주름"
                android:textColor="@color/textColor"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/dongdong"
                android:text="상위 5%"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <SeekBar
                android:id="@+id/seekBar5"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="20dp"
                android:max="10"
                android:progress="1"
                android:progressDrawable="@color/transparent"
                android:thumb="@drawable/ic_thumb"
                android:tickMark="@drawable/drawable_tick_mark" />

        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/dongdong"
                android:text="유분"
                android:textColor="@color/textColor"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/dongdong"
                android:text="상위 33%"
                android:textColor="@color/textColor"
                android:textSize="15sp" />

            <SeekBar
                android:id="@+id/seekBar6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="20dp"
                android:max="10"
                android:progress="1"
                android:progressDrawable="@color/transparent"
                android:thumb="@drawable/ic_thumb"
                android:tickMark="@drawable/drawable_tick_mark" />

        </TableRow>


    </TableLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startCustomCosmeticsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/dongdong"
        android:text="@string/customCosmetics"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:visibility="visible"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/line3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/line3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="15dp"
        android:background="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/loadPictureButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loadPictureButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_background_blue"
        android:fontFamily="@font/dongdong"
        android:text="@string/loadPicture"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/startPictureButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startPictureButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_background_blue"
        android:fontFamily="@font/dongdong"
        android:text="@string/startPicture"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loadPictureButton" />


</androidx.constraintlayout.widget.ConstraintLayout>